test/files/run/repl-paste-parse.check
Type in expressions for evaluation. Or try :help.

scala> repl-paste-parse.script:1: error: illegal start of simple pattern
val case = 9
    ^
:quit
